tests cleanup - unwinding DI